# DiscordBot

./: .gitignore  Cargo.toml  README.md
src/: help.rs  main.rs  owner.rs  scheduler.rs  scraping.rs  ssh.rs  test.rs
src/commands/: help.rs  mod.rs  owner.rs  ssh.rs  test.rs
