[package]
name = "DiscordBot_Rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread", "signal"]}
ssh2 = "0.9.3"
scraper = "0.12.0"
reqwest = {version="0.11.0", features = ["blocking"]}
clokwerk = "0.4.0-rc1"

[dependencies.serenity]
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.10"